fixed footer in index + added content in new character + resized itto

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <style>
     body {
         background-image: url("images/wallpaper/wallpaper_main.jpg");
-        background-size: 100% auto;
-        background-repeat: no-repeat;
+        background-attachment: fixed!important;
+        background-size: cover!important;
     }
 </style>
 <div class="loader-wrapper">
@@ -193,17 +193,24 @@
 
     </div>
 
+    <div class="section" id="section2">
         <div class="list_new_characters">
             <img src="images/wallpaper/banner.png" alt="banner">
             <div>
-                <span>THE RISING STAR ITTO</span>
-                <img src="images/characters/big_itto.png" alt="big itto">
+                <span>OUR RISING STAR.. ITTO!</span>
+                <div>
+                    <img src="images/characters/big_itto.png" alt="big itto">
+                    <div>
+                        <p>"Morning, sunshine! Hey, uh... So listen, I'm fresh out of Mora... again. But hey, who needs some lousy job when we can just go find somewhere fun to hang out! Haha, whaddya say?"</p>
+                        <a href="html/itto.html">BUILD HIM NOW</a>
+                    </div>
+                </div>
             </div>
         </div>
-    <div class="section" id="section2">
     </div>
 
-    <div class="section" id="section3">
+
+    <div class="section fp-auto-height" id="section3">
         <footer>
             <div class="top">
 
@@ -239,7 +246,6 @@
     </div>
 </div>
 
-<script src="script/main.js"></script>
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/fullpage.extensions.min.js"></script>
 
