--- a/html/news.html
+++ b/html/news.html
@@ -243,93 +243,38 @@
             </a>
         </div>
 
-        <div class="single_articles">
-            <a href="">
-                <img src="../images/wallpaper/global_background.png" alt="Article image">
-
-                <div class="articles_content">
-                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
-                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="single_articles">
-            <a href="">
-                <img src="../images/wallpaper/global_background.png" alt="Article image">
-
-                <div class="articles_content">
-                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
-                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="single_articles">
-            <a href="">
-                <img src="../images/wallpaper/global_background.png" alt="Article image">
-
-                <div class="articles_content">
-                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
-                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="single_articles">
-            <a href="">
-                <img src="../images/wallpaper/global_background.png" alt="Article image">
-
-                <div class="articles_content">
-                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
-                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
-                </div>
-            </a>
-        </div>
-
-        <div class="single_articles">
-            <a href="">
-                <img src="../images/wallpaper/global_background.png" alt="Article image">
-
-                <div class="articles_content">
-                    <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
-                    <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid  nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
-                </div>
-            </a>
-        </div>
-
     </div>
 
 
-<!--    <footer>-->
-<!--        <div class="top">-->
-<!--            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"-->
-<!--                                                                         title="Community server"-->
-<!--                                                                         alt="Community server"></a>-->
-<!--            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img-->
-<!--                    src="../images/icons/youtube.png" title="Youtube channel" alt="Youtube channel"></a>-->
-<!--            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"-->
-<!--                                                                        title="Hoyolab" alt="Hoyolab"></a>-->
-<!--        </div>-->
-<!--        <div class="bot">-->
-<!--            <div class="logos">-->
-<!--                <a href="../index.html" target="_blank"><img src="../images/icons/Character_Paimon_Portrait.png"-->
-<!--                                                             title="BuildMePaimon" alt="BuildMePaimon"></a>-->
-<!--                <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img-->
-<!--                        src="../images/img-genshin/genshin_logo.png" title="Genshin Website" alt="Genshin Website"></a>-->
-<!--            </div>-->
-<!--            <div class="links">-->
-<!--                <div>-->
-<!--                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub antaww</a>-->
-<!--                    <a href="https://github.com/xhmyjae" target="_blank" class="github_links">GitHub xhmyjae</a>-->
-<!--                    <a href="mailto: antoine.pizzetta@ynov.com" class="github_links">Contact Us</a>-->
-<!--                </div>-->
-<!--                <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's-->
-<!--                    characters.-->
-<!--                    It is not affiliated with miHoYo.</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </footer>-->
+    <footer>
+        <div class="top">
+            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"
+                                                                         title="Community server"
+                                                                         alt="Community server"></a>
+            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img
+                    src="../images/icons/youtube.png" title="Youtube channel" alt="Youtube channel"></a>
+            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"
+                                                                        title="Hoyolab" alt="Hoyolab"></a>
+        </div>
+        <div class="bot">
+            <div class="logos">
+                <a href="../index.html" target="_blank"><img src="../images/icons/Character_Paimon_Portrait.png"
+                                                             title="BuildMePaimon" alt="BuildMePaimon"></a>
+                <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img
+                        src="../images/img-genshin/genshin_logo.png" title="Genshin Website" alt="Genshin Website"></a>
+            </div>
+            <div class="links">
+                <div>
+                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub antaww</a>
+                    <a href="https://github.com/xhmyjae" target="_blank" class="github_links">GitHub xhmyjae</a>
+                    <a href="mailto: antoine.pizzetta@ynov.com" class="github_links">Contact Us</a>
+                </div>
+                <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's
+                    characters.
+                    It is not affiliated with miHoYo.</p>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
