fix dropdown on albedo

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     <ul class="header">
         <li class="icon_navbar"><a class="icon_navbar" href=""><img alt="Home icon"
                                                                     class="nav_icon_header"
-                                                                    src="images/icons/Icon_Inventory_Furnishings.png" title="Home"></a></li>
+                                                                    src="images/icons/Icon_Inventory_Furnishings.png"
+                                                                    title="Home"></a></li>
         <li class="icon_navbar"><a class="icon_navbar" href="html/news.html"><img alt="News icon"
                                                                                   class="nav_icon_header"
-                                                                                  src="images/icons/Icon_Inventory_Quest.png" title="News"></a></li>
+                                                                                  src="images/icons/Icon_Inventory_Quest.png"
+                                                                                  title="News"></a></li>
         <div class="dropdown">
 
             <li class="icon_navbar char_icon" onclick="showCharacters()"><a class="icon_navbar"><img
@@ -58,7 +60,8 @@
                 <a class="a_icon" href="html/bennett.html"><img alt="Bennett" src="images/characters/Bennett_head.png"
                                                                 title="Bennett"></a>
                 <a class="a_icon" href="html/chongyun.html"><img alt="Chongyun"
-                                                                 src="images/characters/Chongyun_head.png" title="Chongyun"></a>
+                                                                 src="images/characters/Chongyun_head.png"
+                                                                 title="Chongyun"></a>
                 <a class="a_icon" href="html/diluc.html"><img alt="Diluc" src="images/characters/Diluc_head.png"
                                                               title="Diluc"></a>
                 <a class="a_icon" href="html/diona.html"><img alt="Diona" src="images/characters/Diona_head.png"
@@ -78,11 +81,13 @@
                 <a class="a_icon" href="html/jean.html"><img alt="Jean" src="images/characters/Jean_head.png"
                                                              title="Jean"></a>
                 <a class="a_icon" href="html/kazuha.html"><img alt="Kaedehara Kazuha"
-                                                               src="images/characters/Kazuha_head.png" title="Kaedehara Kazuha"></a>
+                                                               src="images/characters/Kazuha_head.png"
+                                                               title="Kaedehara Kazuha"></a>
                 <a class="a_icon" href="html/kaeya.html"><img alt="Kaeya" src="images/characters/Kaeya_head.png"
                                                               title="Kaeya"></a>
                 <a class="a_icon" href="html/ayaka.html"><img alt="Kamisato Ayaka"
-                                                              src="images/characters/Ayaka_head.png" title="Kamisato Ayaka"></a>
+                                                              src="images/characters/Ayaka_head.png"
+                                                              title="Kamisato Ayaka"></a>
                 <a class="a_icon" href="html/keqing.html"><img alt="Keqing" src="images/characters/Keqing_head.png"
                                                                title="Keqing"></a>
                 <a class="a_icon" href="html/klee.html"><img alt="Klee" src="images/characters/Klee_head.png"
@@ -94,19 +99,22 @@
                 <a class="a_icon" href="html/mona.html"><img alt="Mona" src="images/characters/Mona_head.png"
                                                              title="Mona"></a>
                 <a class="a_icon" href="html/ningguang.html"><img alt="Ningguang"
-                                                                  src="images/characters/Ningguang_head.png" title="Ningguang"></a>
+                                                                  src="images/characters/Ningguang_head.png"
+                                                                  title="Ningguang"></a>
                 <a class="a_icon" href="html/noelle.html"><img alt="Noelle" src="images/characters/Noelle_head.png"
                                                                title="Noelle"></a>
                 <a class="a_icon" href="html/qiqi.html"><img alt="Qiqi" src="images/characters/Qiqi_head.png"
                                                              title="Qiqi"></a>
                 <a class="a_icon" href="html/raiden.html"><img alt="Raiden Shogun"
-                                                               src="images/characters/Raiden_head.png" title="Raiden Shogun"></a>
+                                                               src="images/characters/Raiden_head.png"
+                                                               title="Raiden Shogun"></a>
                 <a class="a_icon" href="html/razor.html"><img alt="Razor" src="images/characters/Razor_head.png"
                                                               title="Razor"></a>
                 <a class="a_icon" href="html/rosaria.html"><img alt="Rosaria" src="images/characters/Rosaria_head.png"
                                                                 title="Rosaria"></a>
                 <a class="a_icon" href="html/kokomi.html"><img alt="Sangonomiya kokomi"
-                                                               src="images/characters/Kokomi_head.png" title="Sangonomiya Kokomi"></a>
+                                                               src="images/characters/Kokomi_head.png"
+                                                               title="Sangonomiya Kokomi"></a>
                 <a class="a_icon" href="html/sayu.html"><img alt="Sayu" src="images/characters/Sayu_head.png"
                                                              title="Sayu"></a>
                 <a class="a_icon" href="html/shenhe.html"><img alt="Shenhe" src="images/characters/Shenhe_head.png"
@@ -114,16 +122,19 @@
                 <a class="a_icon" href="html/sucrose.html"><img alt="Sucrose" src="images/characters/Sucrose_head.png"
                                                                 title="Sucrose"></a>
                 <a class="a_icon" href="html/tartaglia.html"><img alt="Tartaglia"
-                                                                  src="images/characters/Tartaglia_head.png" title="Tartaglia"></a>
+                                                                  src="images/characters/Tartaglia_head.png"
+                                                                  title="Tartaglia"></a>
                 <a class="a_icon" href="html/thoma.html"><img alt="Thoma" src="images/characters/Thoma_head.png"
                                                               title="Thoma"></a>
                 <a class="a_icon" href="html/traveler.html"><img alt="Traveler"
-                                                                 src="images/characters/Traveler%20(Electro)_head.png" title="Traveler"></a>
+                                                                 src="images/img-genshin/characters/traveler_geo.png"
+                                                                 title="Traveler"></a>
                 <!--                add element variation for traveler when click ("which element ? -electro/geo/anemo = new html)-->
                 <a class="a_icon" href="html/venti.html"><img alt="Venti" src="images/characters/Venti_head.png"
                                                               title="Venti"></a>
                 <a class="a_icon" href="html/xiangling.html"><img alt="Xiangling"
-                                                                  src="images/characters/Xiangling_head.png" title="Xiangling"></a>
+                                                                  src="images/characters/Xiangling_head.png"
+                                                                  title="Xiangling"></a>
                 <a class="a_icon" href="html/xiao.html"><img alt="Xiao" src="images/characters/Xiao_head.png"
                                                              title="Xiao"></a>
                 <a class="a_icon" href="html/xingqiu.html"><img alt="Xingqiu" src="images/characters/Xingqiu_head.png"
@@ -142,9 +153,10 @@
         </div>
         <li class="icon_navbar"><a
                 class="icon_navbar"
-                href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" target="_blank"><img alt="Genshin map"
-                                                         class="nav_icon_header"
-                                                         src="images/icons/Icon_Inventory_Precious_Items.png" title="Map"></a></li>
+                href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2"
+                target="_blank"><img alt="Genshin map"
+                                     class="nav_icon_header"
+                                     src="images/icons/Icon_Inventory_Precious_Items.png" title="Map"></a></li>
     </ul>
 </nav>
 
@@ -215,21 +227,23 @@
             <div class="top">
 
                 <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img alt="Community server"
-                                                                             src="../images/icons/discord.png"
+                                                                             src="images/icons/discord.png"
                                                                              title="Community server"></a>
                 <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img
-                        alt="Youtube channel" src="../images/icons/youtube.png" title="Youtube channel"></a>
+                        alt="Youtube channel" src="images/icons/youtube.png" title="Youtube channel"></a>
                 <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
-                                                                            src="../images/icons/hoyolab.png" title="Hoyolab"></a>
+                                                                            src="images/icons/hoyolab.png"
+                                                                            title="Hoyolab"></a>
                 <div class="underline_footer">
                 </div>
             </div>
             <div class="bot">
                 <div class="logos">
-                    <a href="../index.html" target="_blank"><img alt="BuildMePaimon"
-                                                                 src="../images/icons/Character_Paimon_Portrait.png" title="BuildMePaimon"></a>
+                    <a href="index.html" target="_blank"><img alt="BuildMePaimon"
+                                                              src="images/icons/Character_Paimon_Portrait.png"
+                                                              title="BuildMePaimon"></a>
                     <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img
-                            alt="Genshin Website" src="../images/img-genshin/genshin_logo.png" title="Genshin Website"></a>
+                            alt="Genshin Website" src="images/img-genshin/genshin_logo.png" title="Genshin Website"></a>
                 </div>
                 <div class="links">
                     <div>
