--- a/html/news.html
+++ b/html/news.html
@@ -31,7 +31,8 @@
                                                                                  title="Home"></a></li>
         <li class="icon_navbar"><a class="icon_navbar" href="../html/news.html"><img alt="News icon"
                                                                                      class="nav_icon_header"
-                                                                                     src="../images/icons/Icon_Inventory_Quest.png" title="News"></a>
+                                                                                     src="../images/icons/Icon_Inventory_Quest.png"
+                                                                                     title="News"></a>
         </li>
 
         <div class="dropdown">
@@ -175,9 +176,10 @@
         </div>
         <li class="icon_navbar"><a
                 class="icon_navbar"
-                href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2" target="_blank"><img alt="Genshin map"
-                                                         class="nav_icon_header"
-                                                         src="../images/icons/Icon_Inventory_Precious_Items.png" title="Map"></a></li>
+                href="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?utm_source=hoyolab&lang=en-us#/map/2"
+                target="_blank"><img alt="Genshin map"
+                                     class="nav_icon_header"
+                                     src="../images/icons/Icon_Inventory_Precious_Items.png" title="Map"></a></li>
     </ul>
 </nav>
 
@@ -254,34 +256,39 @@
 
 
 <footer>
-        <div class="top">
-            <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img src="../images/icons/discord.png"
-                                                                         title="Community server"
-                                                                         alt="Community server"></a>
-            <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img
-                    src="../images/icons/youtube.png" title="Youtube channel" alt="Youtube channel"></a>
-            <a href="https://www.hoyolab.com/home" target="_blank"><img src="../images/icons/hoyolab.png"
-                                                                        title="Hoyolab" alt="Hoyolab"></a>
+    <div class="top">
+
+        <a href="https://discord.gg/sDv2BfsA7W" target="_blank"><img alt="Community server"
+                                                                     src="../images/icons/discord.png"
+                                                                     title="Community server"></a>
+        <a href="https://www.youtube.com/channel/UCiS882YPwZt1NfaM0gR0D9Q" target="_blank"><img
+                alt="Youtube channel" src="../images/icons/youtube.png" title="Youtube channel"></a>
+        <a href="https://www.hoyolab.com/home" target="_blank"><img alt="Hoyolab"
+                                                                    src="../images/icons/hoyolab.png"
+                                                                    title="Hoyolab"></a>
+        <div class="underline_footer">
         </div>
-        <div class="bot">
-            <div class="logos">
-                <a href="../index.html" target="_blank"><img src="../images/icons/Character_Paimon_Portrait.png"
-                                                             title="BuildMePaimon" alt="BuildMePaimon"></a>
-                <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img
-                        src="../images/img-genshin/genshin_logo.png" title="Genshin Website" alt="Genshin Website"></a>
-            </div>
-            <div class="links">
-                <div>
-                    <a href="https://github.com/antaww" target="_blank" class="github_links">GitHub antaww</a>
-                    <a href="https://github.com/xhmyjae" target="_blank" class="github_links">GitHub xhmyjae</a>
-                    <a href="mailto: antoine.pizzetta@ynov.com" class="github_links">Contact Us</a>
-                </div>
-                <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's
-                    characters.
-                    It is not affiliated with miHoYo.</p>
-            </div>
+    </div>
+    <div class="bot">
+        <div class="logos">
+            <a href="../index.html" target="_blank"><img alt="BuildMePaimon"
+                                                         src="../images/icons/Character_Paimon_Portrait.png"
+                                                         title="BuildMePaimon"></a>
+            <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img
+                    alt="Genshin Website" src="../images/img-genshin/genshin_logo.png" title="Genshin Website"></a>
         </div>
-    </footer>
+        <div class="links">
+            <div>
+                <a class="github_links" href="https://github.com/antaww" target="_blank">GitHub antaww</a>
+                <a class="github_links" href="https://github.com/xhmyjae" target="_blank">GitHub xhmyjae</a>
+                <a class="github_links" href="mailto: antoine.pizzetta@ynov.com">Contact Us</a>
+            </div>
+            <p><b>Build Me Paimon</b> is a site created by fans to help players build their Genshin's
+                characters.
+                It is not affiliated with miHoYo.</p>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
