added all the gifs except yunjin's

--- a/html/traveler.html
+++ b/html/traveler.html
@@ -107,21 +107,23 @@
     <img src="../images/characters/big_traveler_anemo.png">
 </div>
 
-<div id="content">
-    <div id="text">
-        <div class="lore">a<br>
-            b
-        </div>
-        <div class="weapons"></div>
-        <div class="artefacts"></div>
-        <div class="materials"></div>
-        <div class="talents"></div>
-        <div class="constellations"></div>
-    </div>
-    <script src="../script/charaNavBar.js"></script>
-</div>
+<div>TRAVELER OUT LOOKING FOR HIS SISTER</div>
 
-<div class="name"><span>Traveler Anemo</span></div>
+<!--<div id="content">-->
+<!--    <div id="text">-->
+<!--        <div class="lore">a<br>-->
+<!--            b-->
+<!--        </div>-->
+<!--        <div class="weapons"></div>-->
+<!--        <div class="artefacts"></div>-->
+<!--        <div class="materials"></div>-->
+<!--        <div class="talents"></div>-->
+<!--        <div class="constellations"></div>-->
+<!--    </div>-->
+<!--    <script src="../script/charaNavBar.js"></script>-->
+<!--</div>-->
+
+<!--<div class="name"><span>Traveler Anemo</span></div>-->
 
 </body>
 </html>
