added new articles content

--- a/html/news.html
+++ b/html/news.html
@@ -188,7 +188,20 @@
 
     <div class="single_articles">
         <a href="">
-            <img alt="Article image" src="../images/wallpaper/global_background.png">
+            <div class="articles_img"></div>
+
+            <div class="articles_content">
+                <h2>Genshin Impact Character OST Album - The Stellar Moments Vol. 2</h2>
+                <p>Genshin Impact's character album "The Stellar Moments Vol. 2" is out now! Featuring 21 splendid
+                    tracks composed by @HOYO-MiX, each one an original composition for the characters of Genshin
+                    Impact.</p>
+            </div>
+        </a>
+    </div>
+
+    <div class="single_articles">
+        <a href="">
+            <div class="articles_img"></div>
 
             <div class="articles_content">
                 <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
@@ -200,7 +213,7 @@
 
     <div class="single_articles">
         <a href="">
-            <img alt="Article image" src="../images/wallpaper/global_background.png">
+            <div class="articles_img"></div>
 
             <div class="articles_content">
                 <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
@@ -212,7 +225,7 @@
 
     <div class="single_articles">
         <a href="">
-            <img alt="Article image" src="../images/wallpaper/global_background.png">
+            <div class="articles_img"></div>
 
             <div class="articles_content">
                 <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
@@ -224,7 +237,7 @@
 
     <div class="single_articles">
         <a href="">
-            <img alt="Article image" src="../images/wallpaper/global_background.png">
+            <div class="articles_img"></div>
 
             <div class="articles_content">
                 <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
@@ -236,19 +249,13 @@
 
     <div class="single_articles">
         <a href="">
-            <img alt="Article image" src="../images/wallpaper/global_background.png">
+            <div class="articles_img"></div>
 
             <div class="articles_content">
                 <h2>sjvbnwsobvwonvpwikn fpiwh </h2>
                 <p>nviwevhiwphfgiwo oeihfgwoifh wpiwhefi qfpiewhf whefipwe hfpihfipwh efiqhepif hwepifh wepif
                     hweoiufhweipfh qw ofjw9eg hewjdnf ih wejn oid nvjken ijn iowehf mn cxj;kfh qpo pmsowaih</p>
             </div>
-        </a>
-    </div>
-
-    <div class="single_articles">
-        <a href="">
-            <img alt="Article image" src="../images/wallpaper/global_background.png">
         </a>
     </div>
 
