--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                     <a>
                         <div>
                             <img alt="Article image" class="new_articles_img"
-                                 src="images/wallpaper/global_background.png">
+                                 src="images/news/first.png">
                         </div>
                         <div class="new_articles_content">
-                            <h2>Lorem ipsum.</h2>
-                            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consequuntur earum exercitationem fuga fugiat illum iure, modi nihil obcaecati omnis praesentium quas ullam ut vero voluptatem. At, voluptatum.</span>
+                            <h2>Genshin Impact Character OST Album - The Stellar Moments Vol. 2</h2>
+                            <span>Genshin Impact's character album "The Stellar Moments Vol. 2" is out now! Featuring 21 splendid tracks composed by @HOYO-MiX, each one an original composition for the characters of Genshin Impact.</span>
                         </div>
                     </a>
                 </div>
@@ -180,11 +180,11 @@
                     <a>
                         <div>
                             <img alt="Article image" class="new_articles_img"
-                                 src="images/wallpaper/global_background.png">
+                                 src="images/news/second.jpg">
                         </div>
                         <div class="new_articles_content">
-                            <h2>Future title</h2>
-                            <span>Bla bla slkzno lz l,c zlssdcpsp...</span>
+                            <h2>Genshin Impact EP - The Joys of Leisure and Pleasure</h2>
+                            <span>An ancient city, both prosperous in day and night. A thousand cups filled with moonlight, shine brightly in the dreams of spring and autumn past.</span>
                         </div>
                     </a>
                 </div>
@@ -192,11 +192,11 @@
                     <a>
                         <div>
                             <img alt="Article image" class="new_articles_img"
-                                 src="images/wallpaper/global_background.png">
+                                 src="images/news/third.jpg">
                         </div>
                         <div class="new_articles_content">
-                            <h2>Future titleq, clk cjl cjlz f</h2>
-                            <span>Bla bla slbclzlsdvksvls vk vkjz vkz hbzu ojzfozfkzfb zifbznclz l,c zlssdcpsp... cdkjhCZB CIJKZB jv iebiu  fbqeiugbei bvi f iuzie bfghz fu u bzivbeuhvbemi bem grhemognr iue oeur i iotz hzmzuef ozhzuie hroz hohizuehozifhoizfeoizbiz  o fozehozoeoizfiuz fiuzh fz zofu hzofhoùzo jev zoifblizu uzlu rhtizrii rgimzueb tfmoz bgizeimuzgmiuz</span>
+                            <h2>"Fleeting Colors in Flight" Gameplay Details</h2>
+                            <span>Look, people are hanging the lights up and breaking out their instruments! It's a new year, and Liyue Harbor is bustling with preparations for the grand celebration of the Lantern Rite Festival...</span>
                         </div>
                     </a>
                 </div>
