--- a/html/albedo.html
+++ b/html/albedo.html
@@ -221,11 +221,11 @@
                                  src="../images/img-genshin/artifacts/husk_of_opulent_dreams_flower.png">
                             <div>
                                 <span class="artifactsName">Husk of Opulent Dreams (x4)</span>
-                                <span class="artifactsText">- DEF +30%
+                                <span class="artifactsText">- DEF <strong>+30%</strong>
                                         <br>- Get curiosity effect in the following conditions: When on the field, the character
                                         gains 1 stack after hitting an opponent with a Geo attack, triggering a maximum of once every 0.3s.
                                         When off the field, the character gains 1 stack every 3s. Curiosity can stack up to 4 times, each
-                                        providing 6% DEF and a 6% Geo DMG Bonus. When 6 seconds pass without gaining a Curiosity stack, 1
+                                        providing <strong>6%</strong> DEF and a <strong>6%</strong> Geo DMG Bonus. When 6 seconds pass without gaining a Curiosity stack, 1
                                         stack is lost.
                                     </span>
                             </div>
@@ -237,7 +237,7 @@
                                  src="../images/img-genshin/artifacts/archaic_petra_flower.png">
                             <div>
                                 <span class="artifactsName">Archaic Petra (x2)</span>
-                                <span class="artifactsText">- Geo DMG Bonus +15%.</span>
+                                <span class="artifactsText">- Geo DMG Bonus <strong>+15%</strong>.</span>
                             </div>
                         </div>
                         <div>
@@ -246,7 +246,7 @@
                                  src="../images/img-genshin/artifacts/noblesse_oblige_flower.png">
                             <div>
                                 <span class="artifactsName">Noblesse Oblige (x2)</span>
-                                <span class="artifactsText">- Elemental Burst DMG +20%.</span>
+                                <span class="artifactsText">- Elemental Burst DMG <strong>+20%</strong>.</span>
                             </div>
                         </div>
                     </div>
