--- a/html/amber.html
+++ b/html/amber.html
@@ -25,11 +25,10 @@
 
 <body class="amber">
 <nav class="navigation">
+    <a class="bmp_logo" href="../index.html" target="_blank"><img alt="BuildMePaimon"
+                                                                  src="../images/icons/logo_transparent.png"
+                                                                  title="BuildMePaimon"></a>
     <ul class="header">
-        <li class="icon_navbar"><a class="icon_navbar" href="../index.html"><img alt="Home icon"
-                                                                                 class="nav_icon_header"
-                                                                                 src="../images/icons/Icon_Inventory_Furnishings.png"
-                                                                                 title="Home"></a></li>
         <li class="icon_navbar"><a class="icon_navbar" href="../html/news.html"><img alt="News icon"
                                                                                      class="nav_icon_header"
                                                                                      src="../images/icons/Icon_Inventory_Quest.png"
