--- a/html/news.html
+++ b/html/news.html
@@ -12,7 +12,7 @@
     <link href="../style/news.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
-    <script src="../script/main.js"></script>
+    <script src="../script/news.js"></script>
 
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
