added all the articles and linked the news to articles on index

--- a/html/first_news.html
+++ b/html/first_news.html
@@ -6,10 +6,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="antaww/xhmyjae" name="author">
     <meta content="Genshin news and updates" name="description">
-    <title>News</title>
+    <title>Genshin Impact Character OST Album - The Stellar Moments Vol. 2</title>
 
     <link href="../style/main.css" rel="stylesheet" type="text/css">
     <link href="../style/news.css" rel="stylesheet" type="text/css"/>
+    <link href="../style/characters.css" rel="stylesheet" type="text/css"/>
     <link href="../style/footer.css" rel="stylesheet" type="text/css"/>
     <link href="../images/icons/Character_Paimon_Portrait.png" rel="icon" type="text/css">
     <script src="../script/news.js"></script>
@@ -17,11 +18,8 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
-
 </head>
-
 <body>
-
 
 <nav class="navigation">
     <a class="bmp_logo" href="../index.html" target="_blank"><img alt="BuildMePaimon"
@@ -169,83 +167,20 @@
     </ul>
 </nav>
 
-
-<div class="all_articles">
-
-    <div class="single_articles">
-        <a href="first_news.html">
-            <div class="articles_img1"></div>
-
-            <div class="articles_content">
-                <h2>Genshin Impact Character OST Album - The Stellar Moments Vol. 2</h2>
-                <p>Genshin Impact's character album "The Stellar Moments Vol. 2" is out now! Featuring 21 splendid
-                    tracks composed by @HOYO-MiX, each one an original composition for the characters of Genshin
-                    Impact.</p>
-            </div>
-        </a>
+<div class="background_articles">
+    <div class="header_articles">Genshin Impact Character OST Album - The Stellar Moments Vol. 2</div>
+    <div class="date_articles">Date Posted Jan 26, 2022</div>
+    <div class="articles">
+        <span>Genshin Impact's character album "The Stellar Moments Vol. 2" is out now! Featuring 21
+            splendid tracks composed by @HOYO-MiX, each one an original composition for the characters of Genshin Impact.</span>
+        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen class="thumbnails" frameborder="0"
+                height="315"
+                src="https://www.youtube.com/embed/hopQXbkXm94"
+                title="YouTube video player"
+                width="560"></iframe>
     </div>
-
-    <div class="single_articles">
-        <a href="second_news.html">
-            <div class="articles_img2"></div>
-
-            <div class="articles_content">
-                <h2>Genshin Impact EP - The Joys of Leisure and Pleasure</h2>
-                <p>An ancient city, both prosperous in day and night.
-                    A thousand cups filled with moonlight, shine brightly in the dreams of spring and autumn past.</p>
-            </div>
-        </a>
-    </div>
-
-    <div class="single_articles">
-        <a href="third_news.html">
-            <div class="articles_img3"></div>
-
-            <div class="articles_content">
-                <h2>"Fleeting Colors in Flight" Gameplay Details</h2>
-                <p>Look, people are hanging the lights up and breaking out their instruments! It's a new year, and Liyue
-                    Harbor is bustling with preparations for the grand celebration of the Lantern Rite Festival...</p>
-            </div>
-        </a>
-    </div>
-
-    <div class="single_articles">
-        <a href="fourth_news.html">
-            <div class="articles_img4"></div>
-
-            <div class="articles_content">
-                <h2>Genshin Impact EP - Trail of the Radiant Qilin</h2>
-                <p>In a grand pavilion, a silhouette passes by in a hurry while it drizzles in the city.
-                    A boat floats idly on the moonlit waters outside of town, as faint traces of the Qilin could be
-                    seen.</p>
-            </div>
-        </a>
-    </div>
-
-    <div class="single_articles">
-        <a href="fifth_news.html">
-            <div class="articles_img5"></div>
-
-            <div class="articles_content">
-                <h2>Prize Giveaway: "Plenilune Gaze" Ganyu Fan Art Contest</h2>
-                <p>Ganyu's Fan Art Contest has begun! Get your drawing tools ready, and come participate~</p>
-            </div>
-        </a>
-    </div>
-
-    <div class="single_articles">
-        <a href="sixth_news.html">
-            <div class="articles_img6"></div>
-
-            <div class="articles_content">
-                <h2>Prize Giveaway: "Vago Mundo" Zhongli Fan Art Contest</h2>
-                <p>Zhongli's Fan Art Contest has begun, it's time to show your real skills!</p>
-            </div>
-        </a>
-    </div>
-
 </div>
-
 
 <footer>
     <div class="top">
