--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="list_articles">
             <div>
                 <div class="articles">
-                    <a>
+                    <a href="html/first_news.html">
                         <div>
                             <img alt="Article image" class="new_articles_img"
                                  src="images/news/first.png">
@@ -176,7 +176,7 @@
                     </a>
                 </div>
                 <div class="articles">
-                    <a>
+                    <a href="html/second_news.html">
                         <div>
                             <img alt="Article image" class="new_articles_img"
                                  src="images/news/second.jpg">
@@ -188,7 +188,7 @@
                     </a>
                 </div>
                 <div class="articles">
-                    <a>
+                    <a href="html/third_news.html">
                         <div>
                             <img alt="Article image" class="new_articles_img"
                                  src="images/news/third.jpg">
