--- a/html/second_news.html
+++ b/html/second_news.html
@@ -23,9 +23,9 @@
 <body>
 
 <nav class="navigation">
-    <a class="bmp_logo" href="../index.html" target="_blank"><img alt="BuildMePaimon"
-                                                                  src="../images/icons/logo_transparent.png"
-                                                                  title="BuildMePaimon"></a>
+    <a class="bmp_logo" href="../index.html"><img alt="BuildMePaimon"
+                                                  src="../images/icons/logo_transparent.png"
+                                                  title="BuildMePaimon"></a>
     <ul class="header">
         <li class="icon_navbar"><a class="icon_navbar" href="../html/news.html"><img alt="News icon"
                                                                                      class="nav_icon_header"
@@ -199,9 +199,9 @@ A thousand cups filled with moonlight, shine brightly in the dreams of spring an
     </div>
     <div class="bot">
         <div class="logos">
-            <a href="../index.html" target="_blank"><img alt="BuildMePaimon"
-                                                         src="../images/icons/Character_Paimon_Portrait.png"
-                                                         title="BuildMePaimon"></a>
+            <a href="../index.html"><img alt="BuildMePaimon"
+                                         src="../images/icons/Character_Paimon_Portrait.png"
+                                         title="BuildMePaimon"></a>
             <a href="https://genshin.mihoyo.com/en/home" target="_blank"><img
                     alt="Genshin Website" src="../images/img-genshin/genshin_logo.png" title="Genshin Website"></a>
         </div>
