--- a/html/yanfei.html
+++ b/html/yanfei.html
@@ -450,7 +450,7 @@
                             <span class="constellationsName">Right of Final Interpretation</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases Yanfei's Charged Attack CRIT rate by 20% against enemies below 50% HP.
                                     </span>
                             </div>
@@ -500,7 +500,7 @@
                     <div class="constellation6">
                         <div>
                             <img alt="constellation" class="constellationimg"
-                                 src="../images/img-genshin/skills/albedo/constellation_6.png">
+                                 src="../images/img-genshin/skills/yanfei/constellation_6.png">
                             <span class="constellationsName">Extra Clause</span>
                             <span>Constellation 6</span>
                             <div>
