--- a/html/tartaglia.html
+++ b/html/tartaglia.html
@@ -5,8 +5,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="antaww/xhmyjae" name="author">
-    <meta content="Tartaglia's complete build" name="description">
-    <title>Tartaglia le sang</title>
+    <meta content="Xingqiu's complete build" name="description">
+    <title>Xingqiu le sang</title>
 
     <link href="../style/characters.css" rel="stylesheet" type="text/css"/>
     <link href="../style/main.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
 
 </head>
 
-<body class="tartaglia">
+<body class="xingqiu">
 
 <nav class="navigation">
     <ul class="header">
@@ -104,7 +104,7 @@
 </div>
 
 <div class="character">
-    <img src="../images/characters/big_tartaglia.png">
+    <img src="../images/characters/big_xingqiu.png">
 </div>
 
 <div id="content">
@@ -121,7 +121,7 @@
     <script src="../script/charaNavBar.js"></script>
 </div>
 
-<div class="name"><span>Tartaglia</span></div>
+<div class="name"><span>Xingqiu</span></div>
 
 </body>
 </html>
