sucrose finished + changed a tag on venti html

--- a/html/venti.html
+++ b/html/venti.html
@@ -217,7 +217,7 @@
                                  src="../images/img-genshin/artifacts/viridescent_venerer_flower.png">
                             <div>
                                 <span class="artifactsName">Viridescent Venerer (x4)</span>
-                                <span class="artifactsText">- Gain a <strong>15%</strong> Anemo DMG Bonus.
+                                <span class="artifactsText">- Gain a <strong>15%</strong> Anemo DMG Bonus.<br>
                                 <span class="artifactsText">- Increases Swirl DMG by <strong>60%</strong>. Decreases opponent's Elemental RES to the element infused in the Swirl by <strong>40%</strong> for 10s.</span>
                             </div>
                         </div>
