--- a/html/beidou.html
+++ b/html/beidou.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="antaww/xhmyjae" name="author">
-    <meta content="BeidoubeidouBeidou's complete build" name="description">
+    <meta content="Beidou's complete build" name="description">
     <title>Beidou Build</title>
 
     <link href="../style/characters.css" rel="stylesheet" type="text/css"/>
