--- a/html/kokomi.html
+++ b/html/kokomi.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="antaww/xhmyjae" name="author">
     <meta content="Kokomi's complete build" name="description">
-    <title>Kokomi Build</title>
+    <title>Sangonomiya Kokomi Build</title>
 
     <link href="../style/characters.css" rel="stylesheet" type="text/css"/>
     <link href="../style/main.css" rel="stylesheet" type="text/css">
