--- a/html/amber.html
+++ b/html/amber.html
@@ -5,7 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="antaww/xhmyjae" name="author">
-    <meta content="Albedo's complete build" name="description">
+    <meta content="Amber's complete build" name="description">
     <title>Amber Build</title>
 
     <link href="../style/characters.css" rel="stylesheet" type="text/css"/>
