--- a/html/lisa.html
+++ b/html/lisa.html
@@ -484,7 +484,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Plasma Eruption</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Increases the number of lightning bolts released by Lightning Rose by 1-3.
                                     </span>
                             </div>
@@ -497,7 +497,7 @@ Increases the number of lightning bolts released by Lightning Rose by 1-3.
                             <span class="constellationsName">Electrocute</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Violet Arc by 3.
+                                    <span class="constellationsDescription">Increase the Level of Violet Arc by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
