--- a/html/sucrose.html
+++ b/html/sucrose.html
@@ -218,7 +218,7 @@
                             <div>
                                 <span class="artifactsName">Viridescent Venerer (x4)</span>
                                 <span class="artifactsText">- Gain a <strong>15%</strong> Anemo DMG Bonus.<br>
-                                <span class="artifactsText">- Increases Swirl DMG by <strong>60%</strong>. Decreases opponent's Elemental RES to the element infused in the Swirl by <strong>40%</strong> for 10s.</span>
+                                - Increases Swirl DMG by <strong>60%</strong>. Decreases opponent's Elemental RES to the element infused in the Swirl by <strong>40%</strong> for 10s.</span>
                             </div>
                         </div>
                     </div>
@@ -436,7 +436,7 @@
                             <span class="constellationsName">Beth: Unbound Form</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         The duration of Forbidden Creation - Isomer 75 / Type II is increased by 2s.
                                     </span>
                             </div>
@@ -463,7 +463,7 @@
                             <span class="constellationsName">Alchemania</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Every 7 Normal and Charged Attacks, Sucrose will reduce the CD of Astable Anemohypostasis Creation - 6308 by 1-7s.
                                     </span>
                             </div>
@@ -476,7 +476,7 @@
                             <span class="constellationsName">Caution: Standard Flask</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increase the Level of Forbidden Creation - Isomer 75 / Type II by 3.
                                         Maximum upgrade level is 15.
                                     </span>
